--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
-      - name: install dependencies
-        run: bun install
-      - name: transpile typescript
-        run: bun run build
-      # - name: run tests
-      #   run: bun test
+      - name: install
+        run: pnpm install
+      - name: transpile
+        run: pnpm build
+      - name: test
+        run: pnpm test
