--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "compilerOptions": { "noEmit": false, "outDir": "lib/cjs", "module": "commonjs", "moduleResolution": "classic", "rootDir": "src" },
+  "compilerOptions": { "noEmit": false, "outDir": "lib/cjs", "module": "commonjs", "moduleResolution": "classic", "rootDir": "src", "declaration": false },
   "include": ["src/**/*"],
   "exclude": ["src/**/*.test.ts", "examples/**/*"]
 }
